registration bug fixed and z-index added

--- a/public_html/css/main.css
+++ b/public_html/css/main.css
@@ -63,6 +63,7 @@ menu
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    z-index: 3;
 }
 .menu__logo {
     margin: 0 auto;
